Update layeredcover/LayeredCoverLayout.java commit!
Signed-off-by: Toaker <ToakerQin@gmail.com>

--- a/Sample/src/main/res/layout/activity_main.xml
+++ b/Sample/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="300dp"
             android:background="#FF0" />
 
         <RelativeLayout
@@ -24,7 +24,7 @@
 
         <ListView
             android:layout_width="match_parent"
-            android:layout_height="600dp"
+            android:layout_height="match_parent"
             android:background="#00F" />
 
     </com.toaker.layeredcover.LayeredCoverLayout>
